--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -12,7 +12,7 @@ nav {margin-bottom: 30px;}
 .first {margin-bottom: 50px; margin-left: 15px; margin-right: 15px;}
 .second {margin-left: 15px; margin-right: 15px;}
 .address, .email, .submit, .map {margin-left: 10px;}
-.submit {margin-left: 25px;}
-.second {max-width: 100%;}
+.submit {margin: auto}
+.map {margin: auto;}
 
 
