--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -1,7 +1,7 @@
 body {background-color: #D0E0FA; color: #0f0059}
 a {color: #da11f0}
 nav {background-color: #ff0303;}
-nav a {color:#2b05e8}
+nav a {color: #ffe6e6}
 nav a:hover {background-color: #ff039a;}
 nav {padding: 10px;}
 nav {margin-bottom: 30px;}
