--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -1,5 +1,5 @@
 body {background-color: #D0E0FA; color: #0f0059}
-a {color: #da11f0}
+a {color: #0f0059}
 nav {background-color: #ff0303;}
 nav a {color: black}
 nav a:hover {background-color: #ff039a;}
